--- a/.github/workflows/refresh.yaml
+++ b/.github/workflows/refresh.yaml
@@ -2,7 +2,7 @@ name: Refresh
 on:
   # performed every two hours
   schedule:
-    - cron: "0 0 0 1/1 * ?"
+    - cron: "0 4 * * *"
   workflow_dispatch:
 
 env:
